debug ticket_price and ticket_quantity

--- a/views/event-detail.ejs
+++ b/views/event-detail.ejs
@@ -12,7 +12,7 @@
   <br>
         Date: <%= event.event_date %><br>
         Created At: <%= event.created_at %><br>
-        Price: ¥<%= event.tickets_price %> (Remaining: <%= event.tickets_quantity %>)<br>
+        Price: ¥<%= event.ticket_price %> (Remaining: <%= event.ticket_quantity %>)<br>
   <a href="/attendee/event/<%= event.event_id %>/book">Book Tickets</a>
   <br>
   <a href="/attendee">Back to Attendee Home Page</a>
