--- a/views/event-detail.ejs
+++ b/views/event-detail.ejs
@@ -12,7 +12,8 @@
   <br>
         Date: <%= event.event_date %><br>
         Created At: <%= event.created_at %><br>
-        Price: ¥<%= event.ticket_price %> (Remaining: <%= event.ticket_quantity %>)<br>
+        Price: £<%= event.ticket_price %><br>
+        Remaining ticket(s): <%= event.ticket_quantity %><br>
   <a href="/attendee/event/<%= event.event_id %>/book">Book Tickets</a>
   <br>
   <a href="/attendee">Back to Attendee Home Page</a>
